--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ This is a sample scrolling text that has scrolls texts to left.
         <script>
             $('#sortable').draggable({containment: "parent"});
             var images = [
-                { src: '1.jpg', title: '1' },
+                { src: '1.JPG', title: '1' },
                 { src: '2.jpg', title: '2' },
-                { src: '3.jpg', title: '3' },
-                { src: '4.jpg', title: '4' }
+                { src: '3.JPG', title: '3' },
+                { src: '4.JPG', title: '4' }
             ];
 
             $(function () {
