--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ This is a sample scrolling text that has scrolls texts to left.
                 { src: '1.JPG', title: '1' },
                 { src: '2.jpg', title: '2' },
                 { src: '3.JPG', title: '3' },
-                { src: '4.JPG', title: '4' }
+                { src: '4.JPG', title: '4' },
+                { src: '5.JPG', title: '5' }
             ];
 
             $(function () {
