--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Funplus Puzzle</title>
     <link href="style.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="5.JPG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="image-puzzle.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
