--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="https://www.termsandconditionsgenerator.com/live.php?token=ax6bD3DfAKRuZgP2AnPCqdceJT5b29gz">Terms and condition</a>
       <a class="mdl-navigation__link" href="https://www.privacypolicygenerator.info/live.php?token=mqbAKK8QgiAQ7QJ9oxbG8SUhl8UGCaGM">Privacy policy</a>
-     <!--  <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a> -->
+    <a class="mdl-navigation__link" href="mailto:infoinspiremobiles@gmail.com">Contact us</a>
+      <!--   <a class="mdl-navigation__link" href="">Link</a> -->
     </nav>
   </div>
   <main class="mdl-layout__content">
@@ -151,7 +151,7 @@ This is a sample scrolling text that has scrolls texts to left.
             <ul class="mdl-mini-footer--link-list">
               <li><a href="https://www.termsandconditionsgenerator.com/live.php?token=ax6bD3DfAKRuZgP2AnPCqdceJT5b29gz">Terms and condition</a></li>
               <li><a href="https://www.privacypolicygenerator.info/live.php?token=mqbAKK8QgiAQ7QJ9oxbG8SUhl8UGCaGM">Privacy policy</a></li>
-              <!-- <li><a href="#">User Agreement</a></li> -->
+              <li><a href="mailto:infoinspiremobiles@gmail.com">Contact us</a></li>
             </ul>
           </div>
         </footer>
