--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ This is a sample scrolling text that has scrolls texts to left.
                 <br />
                 Time Taken: <span class="timeCount">0</span> seconds<br />
                 <div>
-                    <button type="button" onclick="window.location.reload(true);">Play Again</button>
+                  <button type="button" onclick="document.location = 'https://forms.gle/hAbpmufWx3dMkvJc6'">Like It? 😃</button><br>
+                  <button type="button" onclick="window.location.reload(true);">Play Again</button>
+                    
                 </div>
             </div>
         </div>
