--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ This is a sample scrolling text that has scrolls texts to left.
 4. Will Shortz, the New York Times crossword puzzle editor, is the only person in the world to have a degree in enigmatology, the study of puzzles. – Source<br>
 
 5. There is a cryptic organization called Cicada 3301 that posts challenging puzzles online, possibly to recruit codebreakers and linguists. – Source<br></div>
+<div class="staticimage">
+  <img src="static1.jpg">
+</div>
 
         <script>
             $('#sortable').draggable({containment: "parent"});
