--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ This is a sample scrolling text that has scrolls texts to left.
 
 5. There is a cryptic organization called Cicada 3301 that posts challenging puzzles online, possibly to recruit codebreakers and linguists. – Source<br></div>
 <div class="staticimage">
-  <img src="static1.JPG">
+  <img src="static1.jpg">
 </div>
 
         <script>
