--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Funplus Puzzle</title>
     <link href="style.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/png" href="5.JPG">
+   <link rel="shortcut icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="image-puzzle.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -113,7 +113,7 @@ This is a sample scrolling text that has scrolls texts to left.
 
 5. There is a cryptic organization called Cicada 3301 that posts challenging puzzles online, possibly to recruit codebreakers and linguists. – Source<br></div>
 <div class="staticimage">
-  <img src="static1.jpg">
+  <img src="intro.png">
 </div>
 
         <script>
